build/leMepa.output
Grammar

    0 $accept: linhas $end

    1 linhas: linhas linha
    2       | linha

    3 linha: rot comando

    4 $@1: ε

    5 rot: ROTULO $@1 DOIS_PONTOS
    6    | ε

    7 virgula: VIRGULA
    8        | ε

    9 comando: cmd_sem_param
   10        | cmd_um_param_int param1_int
   11        | cmd_um_param_rot param1_rot
   12        | cmd_dois_param_int param1_int virgula param2_int
   13        | CHPR param1_rot virgula param2_int
   14        | DSVR param1_rot virgula param2_int virgula param3_int
   15        | CTHR param1_int virgula param1_rot

   16 cmd_sem_param: INPP
   17              | PARA
   18              | SOMA
   19              | SUBT
   20              | MULT
   21              | DIVI
   22              | INVR
   23              | CONJ
   24              | DISJ
   25              | NEGA
   26              | CMME
   27              | CMMA
   28              | CMIG
   29              | CMDG
   30              | CMEG
   31              | CMAG
   32              | NADA
   33              | LEIT
   34              | IMPR
   35              | STHR

   36 cmd_um_param_int: CRCT
   37                 | AMEM
   38                 | DMEM
   39                 | ENPR
   40                 | ETHR

   41 cmd_um_param_rot: DSVS
   42                 | DSVF

   43 cmd_dois_param_int: CRVL
   44                   | ARMZ
   45                   | CRVI
   46                   | ARMI
   47                   | CREN
   48                   | ENRT
   49                   | RTPR

   50 param1_int: INTEIRO

   51 param2_int: INTEIRO

   52 param3_int: INTEIRO

   53 param1_rot: ROTULO


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    DOIS_PONTOS (258) 5
    ROTULO (259) 5 53
    INTEIRO (260) 50 51 52
    VIRGULA (261) 7
    INPP (262) 16
    PARA (263) 17
    SOMA (264) 18
    SUBT (265) 19
    MULT (266) 20
    DIVI (267) 21
    INVR (268) 22
    CONJ (269) 23
    DISJ (270) 24
    NEGA (271) 25
    CMME (272) 26
    CMMA (273) 27
    CMIG (274) 28
    CMDG (275) 29
    CMEG (276) 30
    CMAG (277) 31
    NADA (278) 32
    LEIT (279) 33
    IMPR (280) 34
    STHR (281) 35
    CRCT (282) 36
    AMEM (283) 37
    DMEM (284) 38
    ENPR (285) 39
    ENRT (286) 48
    DSVS (287) 41
    DSVF (288) 42
    ETHR (289) 40
    CRVL (290) 43
    ARMZ (291) 44
    CRVI (292) 45
    ARMI (293) 46
    CREN (294) 47
    CHPR (295) 13
    RTPR (296) 49
    DSVR (297) 14
    CTHR (298) 15


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    linhas (45)
        on left: 1 2
        on right: 0 1
    linha (46)
        on left: 3
        on right: 1 2
    rot (47)
        on left: 5 6
        on right: 3
    $@1 (48)
        on left: 4
        on right: 5
    virgula (49)
        on left: 7 8
        on right: 12 13 14 15
    comando (50)
        on left: 9 10 11 12 13 14 15
        on right: 3
    cmd_sem_param (51)
        on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35
        on right: 9
    cmd_um_param_int (52)
        on left: 36 37 38 39 40
        on right: 10
    cmd_um_param_rot (53)
        on left: 41 42
        on right: 11
    cmd_dois_param_int (54)
        on left: 43 44 45 46 47 48 49
        on right: 12
    param1_int (55)
        on left: 50
        on right: 10 12 15
    param2_int (56)
        on left: 51
        on right: 12 13 14
    param3_int (57)
        on left: 52
        on right: 14
    param1_rot (58)
        on left: 53
        on right: 11 13 14 15


State 0

    0 $accept: • linhas $end

    ROTULO  shift, and go to state 1

    $default  reduce using rule 6 (rot)

    linhas  go to state 2
    linha   go to state 3
    rot     go to state 4


State 1

    5 rot: ROTULO • $@1 DOIS_PONTOS

    $default  reduce using rule 4 ($@1)

    $@1  go to state 5


State 2

    0 $accept: linhas • $end
    1 linhas: linhas • linha

    $end    shift, and go to state 6
    ROTULO  shift, and go to state 1

    $default  reduce using rule 6 (rot)

    linha  go to state 7
    rot    go to state 4


State 3

    2 linhas: linha •

    $default  reduce using rule 2 (linhas)


State 4

    3 linha: rot • comando

    INPP  shift, and go to state 8
    PARA  shift, and go to state 9
    SOMA  shift, and go to state 10
    SUBT  shift, and go to state 11
    MULT  shift, and go to state 12
    DIVI  shift, and go to state 13
    INVR  shift, and go to state 14
    CONJ  shift, and go to state 15
    DISJ  shift, and go to state 16
    NEGA  shift, and go to state 17
    CMME  shift, and go to state 18
    CMMA  shift, and go to state 19
    CMIG  shift, and go to state 20
    CMDG  shift, and go to state 21
    CMEG  shift, and go to state 22
    CMAG  shift, and go to state 23
    NADA  shift, and go to state 24
    LEIT  shift, and go to state 25
    IMPR  shift, and go to state 26
    STHR  shift, and go to state 27
    CRCT  shift, and go to state 28
    AMEM  shift, and go to state 29
    DMEM  shift, and go to state 30
    ENPR  shift, and go to state 31
    ENRT  shift, and go to state 32
    DSVS  shift, and go to state 33
    DSVF  shift, and go to state 34
    ETHR  shift, and go to state 35
    CRVL  shift, and go to state 36
    ARMZ  shift, and go to state 37
    CRVI  shift, and go to state 38
    ARMI  shift, and go to state 39
    CREN  shift, and go to state 40
    CHPR  shift, and go to state 41
    RTPR  shift, and go to state 42
    DSVR  shift, and go to state 43
    CTHR  shift, and go to state 44

    comando             go to state 45
    cmd_sem_param       go to state 46
    cmd_um_param_int    go to state 47
    cmd_um_param_rot    go to state 48
    cmd_dois_param_int  go to state 49


State 5

    5 rot: ROTULO $@1 • DOIS_PONTOS

    DOIS_PONTOS  shift, and go to state 50


State 6

    0 $accept: linhas $end •

    $default  accept


State 7

    1 linhas: linhas linha •

    $default  reduce using rule 1 (linhas)


State 8

   16 cmd_sem_param: INPP •

    $default  reduce using rule 16 (cmd_sem_param)


State 9

   17 cmd_sem_param: PARA •

    $default  reduce using rule 17 (cmd_sem_param)


State 10

   18 cmd_sem_param: SOMA •

    $default  reduce using rule 18 (cmd_sem_param)


State 11

   19 cmd_sem_param: SUBT •

    $default  reduce using rule 19 (cmd_sem_param)


State 12

   20 cmd_sem_param: MULT •

    $default  reduce using rule 20 (cmd_sem_param)


State 13

   21 cmd_sem_param: DIVI •

    $default  reduce using rule 21 (cmd_sem_param)


State 14

   22 cmd_sem_param: INVR •

    $default  reduce using rule 22 (cmd_sem_param)


State 15

   23 cmd_sem_param: CONJ •

    $default  reduce using rule 23 (cmd_sem_param)


State 16

   24 cmd_sem_param: DISJ •

    $default  reduce using rule 24 (cmd_sem_param)


State 17

   25 cmd_sem_param: NEGA •

    $default  reduce using rule 25 (cmd_sem_param)


State 18

   26 cmd_sem_param: CMME •

    $default  reduce using rule 26 (cmd_sem_param)


State 19

   27 cmd_sem_param: CMMA •

    $default  reduce using rule 27 (cmd_sem_param)


State 20

   28 cmd_sem_param: CMIG •

    $default  reduce using rule 28 (cmd_sem_param)


State 21

   29 cmd_sem_param: CMDG •

    $default  reduce using rule 29 (cmd_sem_param)


State 22

   30 cmd_sem_param: CMEG •

    $default  reduce using rule 30 (cmd_sem_param)


State 23

   31 cmd_sem_param: CMAG •

    $default  reduce using rule 31 (cmd_sem_param)


State 24

   32 cmd_sem_param: NADA •

    $default  reduce using rule 32 (cmd_sem_param)


State 25

   33 cmd_sem_param: LEIT •

    $default  reduce using rule 33 (cmd_sem_param)


State 26

   34 cmd_sem_param: IMPR •

    $default  reduce using rule 34 (cmd_sem_param)


State 27

   35 cmd_sem_param: STHR •

    $default  reduce using rule 35 (cmd_sem_param)


State 28

   36 cmd_um_param_int: CRCT •

    $default  reduce using rule 36 (cmd_um_param_int)


State 29

   37 cmd_um_param_int: AMEM •

    $default  reduce using rule 37 (cmd_um_param_int)


State 30

   38 cmd_um_param_int: DMEM •

    $default  reduce using rule 38 (cmd_um_param_int)


State 31

   39 cmd_um_param_int: ENPR •

    $default  reduce using rule 39 (cmd_um_param_int)


State 32

   48 cmd_dois_param_int: ENRT •

    $default  reduce using rule 48 (cmd_dois_param_int)


State 33

   41 cmd_um_param_rot: DSVS •

    $default  reduce using rule 41 (cmd_um_param_rot)


State 34

   42 cmd_um_param_rot: DSVF •

    $default  reduce using rule 42 (cmd_um_param_rot)


State 35

   40 cmd_um_param_int: ETHR •

    $default  reduce using rule 40 (cmd_um_param_int)


State 36

   43 cmd_dois_param_int: CRVL •

    $default  reduce using rule 43 (cmd_dois_param_int)


State 37

   44 cmd_dois_param_int: ARMZ •

    $default  reduce using rule 44 (cmd_dois_param_int)


State 38

   45 cmd_dois_param_int: CRVI •

    $default  reduce using rule 45 (cmd_dois_param_int)


State 39

   46 cmd_dois_param_int: ARMI •

    $default  reduce using rule 46 (cmd_dois_param_int)


State 40

   47 cmd_dois_param_int: CREN •

    $default  reduce using rule 47 (cmd_dois_param_int)


State 41

   13 comando: CHPR • param1_rot virgula param2_int

    ROTULO  shift, and go to state 51

    param1_rot  go to state 52


State 42

   49 cmd_dois_param_int: RTPR •

    $default  reduce using rule 49 (cmd_dois_param_int)


State 43

   14 comando: DSVR • param1_rot virgula param2_int virgula param3_int

    ROTULO  shift, and go to state 51

    param1_rot  go to state 53


State 44

   15 comando: CTHR • param1_int virgula param1_rot

    INTEIRO  shift, and go to state 54

    param1_int  go to state 55


State 45

    3 linha: rot comando •

    $default  reduce using rule 3 (linha)


State 46

    9 comando: cmd_sem_param •

    $default  reduce using rule 9 (comando)


State 47

   10 comando: cmd_um_param_int • param1_int

    INTEIRO  shift, and go to state 54

    param1_int  go to state 56


State 48

   11 comando: cmd_um_param_rot • param1_rot

    ROTULO  shift, and go to state 51

    param1_rot  go to state 57


State 49

   12 comando: cmd_dois_param_int • param1_int virgula param2_int

    INTEIRO  shift, and go to state 54

    param1_int  go to state 58


State 50

    5 rot: ROTULO $@1 DOIS_PONTOS •

    $default  reduce using rule 5 (rot)


State 51

   53 param1_rot: ROTULO •

    $default  reduce using rule 53 (param1_rot)


State 52

   13 comando: CHPR param1_rot • virgula param2_int

    VIRGULA  shift, and go to state 59

    $default  reduce using rule 8 (virgula)

    virgula  go to state 60


State 53

   14 comando: DSVR param1_rot • virgula param2_int virgula param3_int

    VIRGULA  shift, and go to state 59

    $default  reduce using rule 8 (virgula)

    virgula  go to state 61


State 54

   50 param1_int: INTEIRO •

    $default  reduce using rule 50 (param1_int)


State 55

   15 comando: CTHR param1_int • virgula param1_rot

    VIRGULA  shift, and go to state 59

    $default  reduce using rule 8 (virgula)

    virgula  go to state 62


State 56

   10 comando: cmd_um_param_int param1_int •

    $default  reduce using rule 10 (comando)


State 57

   11 comando: cmd_um_param_rot param1_rot •

    $default  reduce using rule 11 (comando)


State 58

   12 comando: cmd_dois_param_int param1_int • virgula param2_int

    VIRGULA  shift, and go to state 59

    $default  reduce using rule 8 (virgula)

    virgula  go to state 63


State 59

    7 virgula: VIRGULA •

    $default  reduce using rule 7 (virgula)


State 60

   13 comando: CHPR param1_rot virgula • param2_int

    INTEIRO  shift, and go to state 64

    param2_int  go to state 65


State 61

   14 comando: DSVR param1_rot virgula • param2_int virgula param3_int

    INTEIRO  shift, and go to state 64

    param2_int  go to state 66


State 62

   15 comando: CTHR param1_int virgula • param1_rot

    ROTULO  shift, and go to state 51

    param1_rot  go to state 67


State 63

   12 comando: cmd_dois_param_int param1_int virgula • param2_int

    INTEIRO  shift, and go to state 64

    param2_int  go to state 68


State 64

   51 param2_int: INTEIRO •

    $default  reduce using rule 51 (param2_int)


State 65

   13 comando: CHPR param1_rot virgula param2_int •

    $default  reduce using rule 13 (comando)


State 66

   14 comando: DSVR param1_rot virgula param2_int • virgula param3_int

    VIRGULA  shift, and go to state 59

    $default  reduce using rule 8 (virgula)

    virgula  go to state 69


State 67

   15 comando: CTHR param1_int virgula param1_rot •

    $default  reduce using rule 15 (comando)


State 68

   12 comando: cmd_dois_param_int param1_int virgula param2_int •

    $default  reduce using rule 12 (comando)


State 69

   14 comando: DSVR param1_rot virgula param2_int virgula • param3_int

    INTEIRO  shift, and go to state 70

    param3_int  go to state 71


State 70

   52 param3_int: INTEIRO •

    $default  reduce using rule 52 (param3_int)


State 71

   14 comando: DSVR param1_rot virgula param2_int virgula param3_int •

    $default  reduce using rule 14 (comando)
